<resources>
    <string name="app_name">PingPongScorer</string>

    <string name="activity_home_add_player_button">Add Player</string>
    <string name="activity_home_view_players_button">View Players</string>
    <string name="activity_home_add_game_button">Add Game</string>


    <string name="player_first_name_label">First Name</string>
    <string name="player_last_name_label">Last Name</string>
    <string name="player_nickname_label">Nickname</string>

    <string name="activity_add_edit_player_first_name_text_hint">Enter first name.</string>
    <string name="activity_add_edit_player_last_name_text_hint">Enter last name.</string>
    <string name="activity_add_edit_player_nickname_text_hint">Enter nickname.</string>

    <string name="team_a_player_a_label">Team A Player A</string>
    <string name="team_a_player_b_label">Team A Player B</string>
    <string name="team_a_score_label">Team A Score</string>
    <string name="team_b_player_a_label">Team B Player A</string>
    <string name="team_b_player_b_label">Team B Player B</string>
    <string name="team_b_score_label">Team B Score</string>

    <string name="save_button">Save</string>
    <string name="player_please_select_prompt">Please Select a Player</string>
</resources>
