<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/activity_home_add_player_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_home_add_player_button"/>

    <Button
        android:id="@+id/activity_home_view_players_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_home_view_players_button"/>

    <Button
        android:id="@+id/activity_home_add_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_home_add_game_button"/>

</LinearLayout>
