<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/player_first_name_label"
        style="?android:listSeparatorTextViewStyle"/>

    <TextView
        android:id="@+id/activity_view_player_first_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/player_last_name_label"
        style="?android:listSeparatorTextViewStyle"/>

    <TextView
        android:id="@+id/activity_view_player_last_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/player_nickname_label"
        style="?android:listSeparatorTextViewStyle"/>

    <TextView
        android:id="@+id/activity_view_player_nickname_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>